--- a/www/index.html
+++ b/www/index.html
@@ -232,7 +232,7 @@
         </section>
 
         <section class="o-hero  o-hero--offset">
-            <div class="container container--xl">
+            <div class="a-container">
                 <div class="o-hero__body">
                     <div class="row">
                         <div class="col-12">
@@ -242,15 +242,16 @@
                 </div>
             </div>
             <picture class="o-hero__figure">
-                <source media="(min-width:600px)" src="./img/map.jpg" srcset="./img/map@2x.jpg 2x">
-                <img src="./img/map-mobile.jpg" srcset="./img/map-mobile@2x.jpg 2x" alt="Flowers">
+                <source media="(min-width:1000px)" src="./img/map.jpg" srcset="./img/map@2x.jpg 2x">
+                <source media="(min-width:700px)" src="./img/map-tablet.jpg" srcset="./img/map-tablet@2x.jpg 2x">
+                <img src="./img/map-mobile.jpg" srcset="./img/map-mobile@2x.jpg 2x" alt="map-mobile photo                   ">
             </picture>
         </section>
 
         <section class="o-section">
             <div class="a-container">
                 <div class="row mt-5">
-                    <div class="col-lg-5 o-section--offset">
+                    <div class="col-lg-5 o-section--offset o-section--offset-left">
                         <div class="m-box">
                             <div class="m-box__header">
                                 <h3 class="m-box__name">Sídlo společnosti</h3>
@@ -388,38 +389,6 @@
             </div>
         </section>
 
-        <div class="m-box m-box--dark m-box--dotted mt-5">
-            <div class="m-box__header">
-                <h3 class="m-box__name">Fakturační údaje</h3>
-            </div>
-            <div class="m-box__body">
-                <h4 class="m-box__title">ONIVON a. s.</h4>
-                <address class="a-adress">
-                    Akademika Bedrny 88/6 <br>
-                    500 03 Hradec Králové
-                </address>
-                <ul class="a-list">
-                    <li>
-                        IČO: 25942182
-                    </li>
-                    <li>
-                        DIČ: CZ 25942182
-                    </li>
-                </ul>
-                <ul class="a-list">
-                    <li>
-                        Zápis v OR: Krajský soud v Hradci Králové,
-                    </li>
-                    <li>
-                        oddíl B/2110
-                    </li>
-                    <li>
-                        Základní kapitál: 241 150 000 Kč
-                    </li>
-                </ul>
-            </div>
-        </div>
-
         <footer class="o-footer">
             <div class="container">
                 <div class="row">
@@ -456,7 +425,7 @@
                             </div>
                             <div class="d-flex flex-column mt-3">
                                 <h5 class="a-title a-title--footer mb-3">Contact</h5>
-                                <ul class="a-list o-footer__list a-list--white a-list--col">
+                                <ul class="a-list a-list--white a-list--col">
                                     <li>
                                         <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
