--- a/www/service-detail.html
+++ b/www/service-detail.html
@@ -71,7 +71,9 @@
                     <div class="row">
                         <div class="col-md-7">
                             <h1 class="a-title o-hero__title">Energie <span>a služby</span></h1>
-                            <img class="a-icon" src="./img/icon-energetika.png" srcseet="./img/icon-energetika@2x.png 2x" alt="icon energetika">
+                            <div class="a-icon">
+                                <img src="./img/icon-energetika.png" srcseet="./img/icon-energetika@2x.png 2x" alt="icon energetika">
+                            </div>
                         </div>
                         <div class="col-md-5 d-flex align-items-center">
                             <div class="a-perex">
@@ -109,7 +111,7 @@
             </div>
         </div>
 
-        <section class="o-section o-secction--xs o-section--light">
+        <section class="o-section o-section--light">
             <div class="a-container a-container--xl">
                 <h2 class="a-title a-title--bold">Naše společnost nabízí především</h2>
                 <ul class="a-list a-list--dash">
@@ -123,7 +125,7 @@
             </div>
         </section>
 
-        <section class="o-section o-section--xs o-section--light">
+        <section class="o-section o-section--light pt-0 pb-0">
             <div class="a-container">
                 <figure class="a-figure">
                     <img class="a-figure__img" src="./img/detail-img.jpg" srcset="./img/detail-img@2x.jpg 2x" alt="detail">
@@ -132,7 +134,7 @@
             </div>
         </section>
 
-        <section class="o-section o-section--xs o-section--light">
+        <section class="o-section o-section--light">
             <div class="a-container a-container--xl">
                 <h2 class="a-title a-title--bold">Naše společnost nabízí především</h2>
                 <div class="a-perex">
@@ -145,7 +147,7 @@
             </div>
         </section>
 
-        <section class="o-section o-section--xs o-section--light">
+        <section class="o-section o-section--light pb-0 pt-0">
             <div class="a-container">
                 <div class="m-white-box">
                     <h2 class="a-title a-title--bold">Povolení</h2>
@@ -259,7 +261,7 @@
             </div>
         </section>
 
-        <section class="o-section o-section--xs o-section--light">
+        <section class="o-section o-section--light">
             <div class="a-container a-container--xl">
                 <h2 class="a-title a-title--bold">Tabulka headline</h2>
                 <table class="table a-table">
