--- a/www/service-detail.html
+++ b/www/service-detail.html
@@ -308,6 +308,112 @@
             </div>
         </section>
 
+        <section class="o-section o-section--light">
+            <div class="a-container">
+                <div class="m-swiper">
+                    <div class="a-container a-container--xl">
+                        <div class="m-carousel">
+                            <div class="swiper">
+                                <div class="swiper-wrapper m-carousel__wrapper">
+                                        <div class="swiper-slide m-carousel__slide" aria-label="1 / 9">
+                                            <div class="m-carousel__body">
+                                                <div class="m-carousel__figure"  id="lightgallery lightgallery1">
+                                                    <a href="./img/certificate-big.jpg" >
+                                                        <img src="./img/certificate.jpg" srcset="./img/certificate@2x.jpg 2x" alt="ISO 13485 EN">
+                                                    </a>
+                                                </div>
+                                                <div class="m-carousel__main">
+                                                    <h4 class="m-carousel__title"><strong>ISO 13485 EN</strong></h4>
+                                                    <div class="a-perex m-carousel__perex">
+                                                        <p>Medical devices, Quality management systems</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="swiper-slide m-carousel__slide"  aria-label="1 / 9">
+                                            <div class="m-carousel__body">
+                                                <div class="m-carousel__figure" id="lightgallery lightgallery2">
+                                                    <a href="./img/certificate-big.jpg" data-iframe-title="helo helo">
+                                                        <img src="./img/certificate.jpg" srcset="./img/certificate@2x.jpg 2x" alt="ISO 13485 EN">
+                                                    </a>
+                                                </div>
+                                                <div class="m-carousel__main">
+                                                    <h4 class="m-carousel__title"><strong>ISO 13485 EN</strong></h4>
+                                                    <div class="a-perex m-carousel__perex">
+                                                        <p>Medical devices, Quality management systems</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide m-carousel__slide"  aria-label="1 / 9">
+                                            <div class="m-carousel__body">
+                                                <div class="m-carousel__figure">
+                                                    <a href="">
+                                                        <img src="./img/certificate.jpg" srcset="./img/certificate@2x.jpg 2x" alt="certifikát">
+                                                    </a>
+                                                </div>
+                                                <div class="m-carousel__main">
+                                                    <h4 class="m-carousel__title"><strong>ISO 13485 EN</strong></h4>
+                                                    <div class="a-perex m-carousel__perex">
+                                                        <p>Medical devices, Quality management systems</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide m-carousel__slide"  aria-label="1 / 9">
+                                            <div class="m-carousel__body">
+                                                <div class="m-carousel__figure">
+                                                    <a href="">
+                                                        <img src="./img/certificate.jpg" srcset="./img/certificate@2x.jpg 2x" alt="certifikát">
+                                                    </a>
+                                                </div>
+                                                <div class="m-carousel__main">
+                                                    <h4 class="m-carousel__title"><strong>ISO 13485 EN</strong></h4>
+                                                    <div class="a-perex m-carousel__perex">
+                                                        <p>Medical devices, Quality management systems</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide m-carousel__slide" role="group" aria-label="1 / 9">
+                                            <div class="m-carousel__body">
+                                                <div class="m-carousel__figure">
+                                                    <a href="">
+                                                        <img src="./img/certificate.jpg" srcset="./img/certificate@2x.jpg 2x" alt="certifikát">
+                                                    </a>
+                                                </div>
+                                                <div class="m-carousel__main">
+                                                    <h4 class="m-carousel__title"><strong>ISO 13485 EN</strong></h4>
+                                                    <div class="a-perex m-carousel__perex">
+                                                        <p>Medical devices, Quality management systems</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    <div class="a-container">
+                        <div class="m-swiper__controls">
+                            <button class="swiper-button-prev m-swiper__btn m-swiper__btn--prev">
+                                <svg width="15" height="28" viewBox="0 0 15 28" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M.461 13.75 14.25 27.539l.707-.708L1.876 13.75 14.957.669 14.25-.04z" fill="currentColor" fill-rule="nonzero"/>
+                                </svg>
+                            </button>
+                            <button class="swiper-button-next m-swiper__btn m-swiper__btn--next">
+                                <svg width="15" height="28" viewBox="0 0 15 28" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M.461 13.75 14.25 27.539l.707-.708L1.876 13.75 14.957.669 14.25-.04z" fill="currentColor" fill-rule="nonzero"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="o-section">
             <div class="a-container">
                 <h2 class="a-title o-section__title">Kontakty</h2>
