--- a/www/404.html
+++ b/www/404.html
@@ -18,7 +18,8 @@
         <meta name="theme-color" content="#fafafa">
     </head>
     <body>
-        <header class="o-header">
+        <header class="o-header js--stickyNav">
+            <div class="o-header__overlay js-overlay"></div>
             <a href="#" class="a-brand">
                 <img src="./img/brand-icon.svg" alt="">
             </a>
