--- a/www/about-us.html
+++ b/www/about-us.html
@@ -18,7 +18,8 @@
         <meta name="theme-color" content="#fafafa">
     </head>
     <body>
-        <header class="o-header">
+        <header class="o-header js--stickyNav">
+            <div class="o-header__overlay js-overlay"></div>
             <a href="#" class="a-brand">
                 <img src="./img/brand-icon.svg" alt="">
             </a>
@@ -227,12 +228,12 @@
             </div>
         </section>
 
-        <section class="o-section">
+        <section class="o-section js--unpinWhiteBox">
             <div class="a-container">
                 <h2 class="a-title o-section__title">Kontakty</h2>
                 <div class="row mt-5">
                     <div class="col-lg-5">
-                        <div class="m-box">
+                        <div class="m-box js--pinBox">
                             <div class="m-box__header">
                                 <h3 class="m-box__name">Sídlo společnosti</h3>
                             </div>
