--- a/www/contact-us.html
+++ b/www/contact-us.html
@@ -18,7 +18,8 @@
         <meta name="theme-color" content="#fafafa">
     </head>
     <body>
-        <header class="o-header">
+        <header class="o-header js--stickyNav">
+            <div class="o-header__overlay js-overlay"></div>
             <a href="#" class="a-brand">
                 <img src="./img/brand-icon.svg" alt="">
             </a>
@@ -77,7 +78,7 @@
             </div>
             <picture class="o-hero__figure">
                 <picture class="o-hero__figure">
-                    <source media="(min-width:1400px)" src="./img/map.jpg" srcset="./img/map@2x.jpg 2x">
+                    <source media="(min-width:800px)" src="./img/map.jpg" srcset="./img/map@2x.jpg 2x">
                     <source media="(min-width:400px)" src="./img/map-tablet.jpg" srcset="./img/map-tablet@2x.jpg 2x">
                     <img src="./img/map-mobile.jpg" srcset="./img/map-mobile@2x.jpg 2x" alt="map-mobile photo                   ">
                 </picture>
@@ -88,7 +89,7 @@
             <div class="a-container">
                 <div class="row mt-5">
                     <div class="col-lg-5 o-section--offset">
-                        <div class="m-box">
+                        <div class="m-box m-box--no-sticky">
                             <div class="m-box__header">
                                 <h3 class="m-box__name">Sídlo společnosti</h3>
                             </div>
