--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,8 @@
         <meta name="theme-color" content="#fafafa">
     </head>
     <body>
-        <header class="o-header">
+        <header class="o-header js--stickyNav">
+            <div class="o-header__overlay js-overlay"></div>
             <a href="#" class="a-brand">
                 <img src="./img/brand-icon.svg" alt="">
             </a>
@@ -248,11 +249,11 @@
             </picture>
         </section>
 
-        <section class="o-section">
+        <section class="o-section js--unpinWhiteBox">
             <div class="a-container">
                 <div class="row mt-5">
                     <div class="col-lg-5 o-section--offset o-section--offset-left">
-                        <div class="m-box">
+                        <div class="m-box js--pinBox">
                             <div class="m-box__header">
                                 <h3 class="m-box__name">Sídlo společnosti</h3>
                             </div>
