--- a/www/career.html
+++ b/www/career.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/bundle.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
         <meta name="theme-color" content="#fafafa">
     </head>
@@ -266,7 +266,7 @@
             <div class="a-container">
                 <h2 class="a-title a-title--bold o-section__title o-section__title--sm">máte zájem<span>o pracovní pozici?</span></h2>
                 <div class="a-perex">
-                    <p>Své strukturované životopisy prosím, zasílejte na emailovou adresu <a href="mailto:personalistika@onivon.cz"></a><strong>personalistika@onivon.cz</strong></p>
+                    <p>Své strukturované životopisy prosím, zasílejte na emailovou adresu <strong><a href="mailto:personalistika@onivon.cz">personalistika@onivon.cz</a></strong></p>
                 </div>
 
             </div>
