--- a/www/index.html
+++ b/www/index.html
@@ -13,14 +13,14 @@
         <link rel="stylesheet" href="css/bundle.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
         <meta name="theme-color" content="#fafafa">
     </head>
     <body>
         <header class="o-header js--stickyNav">
             <div class="o-header__overlay js-overlay"></div>
-            <a href="#" class="a-brand">
+            <a href="#" class="a-brand o-header__brand">
                 <img src="./img/brand-icon.svg" alt="">
             </a>
             <button class="a-hamburger hamburger hamburger--spin js--hamburger" type="button" data-target="#primaryNav" aria-controls="primaryNav" aria-label="Toggle mobile navigation">
@@ -104,7 +104,7 @@
                     <div class="m-product-box">
                         <div class="m-product-box__body">
                             <div class="m-product-box__icon">
-                                <img src="./img/icon-strojírenstvi.png" srcset="./img/icon-strojírenstvi@2x.png 2x" alt="">
+                                <img src="./img/icon-strojirenstvi.png" srcset="./img/icon-strojirenstvi@2x.png 2x" alt="">
                             </div>
                             <div class="m-product-box__about">
                                 <h2 class="a-title m-product-box__title">Strojírenství</h2>
